codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__empty.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 5444
expression: terminal.backend()
---
"┌ WECODE ──────────────────────────────────────────────────────────────────────────────────────────┐"
"~ Ask wecode to inspect, edit, test, or explain                                                    │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"  ? help                                                                         100% context left  "
